syntax = "proto3";

package messari.chainlink.v1;

message Aggregator {
  string address = 1;
  string description = 2;

  string base = 3;
  string base_address = 4;
  uint64 base_decimals = 5;
  
  string quote = 6;
  string quote_address = 7;
  uint64 quote_decimals = 8;
  
  uint64 decimals = 9; // Aggregator Decimals
}