syntax = "proto3";

package messari.erc20_price.v1;

message Token {
  string address = 1;
  string symbol = 2;
  uint64 decimals = 3;
}

message Erc20Price {
  Token token = 1;
  string price_usd = 2;
  uint64 block_number = 3; // last updated block number
  
  enum Source {
    ORACLES = 0;
    CHAINLINK = 1;
  }
  Source source = 4;
}

message Erc20Prices {
  repeated Erc20Price items = 1;
}
